Fixed connection bugs between the backend and the frontend to display the correct data.